[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Levels/Tutorial/1 - Game Intro.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Arrow.tscn" type="PackedScene" id=15]

[node name="1 - Game Intro" type="Node2D"]
script = ExtResource( 12 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Grid" parent="." instance=ExtResource( 6 )]

[node name="Robot" parent="Grid" instance=ExtResource( 2 )]

[node name="Button" parent="Grid" instance=ExtResource( 9 )]

[node name="Door" parent="Grid" instance=ExtResource( 4 )]

[node name="Level Control" parent="." instance=ExtResource( 10 )]

[node name="IDE" parent="." instance=ExtResource( 3 )]

[node name="Counter" parent="IDE/Scopes/Main/Main" index="2"]
maxBlocks = 4

[node name="CodeBlockBar" parent="." instance=ExtResource( 8 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 11 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 7 )]

[node name="TextBox" parent="." instance=ExtResource( 5 )]

[node name="PopupMenu" parent="." instance=ExtResource( 14 )]

[node name="IDE_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 1350, 475 )
rotation = 1.5708
scale = Vector2( 2, 2 )

[node name="Run_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 1560, 880 )
rotation = 3.14159
scale = Vector2( 2, 2 )

[node name="Clear_All_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 1790, 880 )
rotation = 3.14159
scale = Vector2( 2, 2 )

[node name="Clear_Code_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 1790, 380 )
rotation = 1.5708
z_index = 4

[node name="Settings_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 130, 50 )
rotation = 4.71239

[node name="Restart_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 130, 130 )
rotation = 4.71239

[node name="DoubleSpeed_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 110, 820 )
rotation = 3.14159

[node name="Help_Arrow" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( 130, 210 )
rotation = 4.71239

[connection signal="interact" from="Grid/Robot" to="Grid/Button" method="_on_Robot_interact"]
[connection signal="buttonPressed" from="Grid/Button" to="." method="_on_Button_buttonPressed"]

[editable path="IDE"]
[editable path="IDE/Scopes/Main/Main"]
